# serializer version: 1
# name: test_remote_action_payload[siren.peugeot_suv_3008_horn-turn_off]
  dict({
    'attributes': None,
    'callback_attributes': None,
    'charging': None,
    'door': None,
    'horn': dict({
      'state': <RemoteHornState.UNACTIVATED: 'Unactivated'>,
    }),
    'label': None,
    'lights': None,
    'navigation': None,
    'preconditioning': None,
    'wake_up': None,
  })
# ---
# name: test_remote_action_payload[siren.peugeot_suv_3008_horn-turn_on]
  dict({
    'attributes': None,
    'callback_attributes': None,
    'charging': None,
    'door': None,
    'horn': dict({
      'state': <RemoteHornState.ACTIVATED: 'Activated'>,
    }),
    'label': None,
    'lights': None,
    'navigation': None,
    'preconditioning': None,
    'wake_up': None,
  })
# ---
